--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>FancyDialogs Editor | Modern Dialog Creator for Minecraft</title>
+    <title>FancyDialogs Editor</title>
     <link rel="stylesheet" href="styles.css?v=11">
 </head>
 <body>
