Better buttons bc why not

--- a/index.html
+++ b/index.html
@@ -181,25 +181,25 @@
               </md-icon-button>
             </div>
 
-            <md-outlined-button id="download-btn">
+            <md-filled-tonal-button id="download-btn">
               <span class="material-symbols-outlined" slot="icon">save</span>
               Download
-            </md-outlined-button>
+            </md-filled-tonal-button>
 
-            <md-outlined-button id="presets-btn">
+            <md-filled-tonal-button id="presets-btn">
               <span class="material-symbols-outlined" slot="icon">view_module</span>
               Presets
-            </md-outlined-button>
+            </md-filled-tonal-button>
 
-            <md-outlined-button id="import-btn">
+            <md-filled-tonal-button id="import-btn">
               <span class="material-symbols-outlined" slot="icon">folder_open</span>
               Import
-            </md-outlined-button>
+            </md-filled-tonal-button>
 
-            <md-text-button id="reset-btn" class="danger-btn">
+            <md-filled-tonal-button id="reset-btn" class="danger-tonal-btn">
               <span class="material-symbols-outlined" slot="icon">delete</span>
               Reset
-            </md-text-button>
+            </md-filled-tonal-button>
 
             <input type="file" id="file-input" accept=".json" style="display:none">
           </div>
