--- a/index.html
+++ b/index.html
@@ -516,8 +516,8 @@
       </div>
 
       <div class="m3-dialog-actions">
-        <md-text-button id="cancel-action-btn">Cancel</md-text-button>
-        <md-filled-tonal-button id="confirm-action-btn">Add Action</md-filled-tonal-button>
+        <button class="btn-text" id="cancel-action-btn">Cancel</button>
+        <button class="btn-tonal" id="confirm-action-btn">Add Action</button>
       </div>
     </div>
   </dialog>
@@ -547,8 +547,8 @@
       </div>
 
       <div class="m3-dialog-actions">
-        <md-text-button id="cancel-option-btn">Cancel</md-text-button>
-        <md-filled-tonal-button id="confirm-option-btn">Add Option</md-filled-tonal-button>
+        <button class="btn-text" id="cancel-option-btn">Cancel</button>
+        <button class="btn-tonal" id="confirm-option-btn">Add Option</button>
       </div>
     </div>
   </dialog>
@@ -593,7 +593,7 @@
       </div>
 
       <div class="m3-dialog-actions">
-        <md-text-button id="cancel-presets-btn">Cancel</md-text-button>
+        <button class="btn-text" id="cancel-presets-btn">Cancel</button>
       </div>
     </div>
   </dialog>
