Updated links and resources

--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@
 
       <div class="github-link">
         If you find any issues or have feature ideas, please report them on
-        <a href="https://github.com/TSERATO/FancyDialogs-Web-Editor" target="_blank" rel="noopener">GitHub</a>
+        <a href="https://github.com/tolnayeu/FancyDialogs-Editor" target="_blank" rel="noopener">GitHub</a>
       </div>
     </div><!-- /editor-page -->
 
@@ -474,12 +474,16 @@
           <div class="footer-nav-col">
             <p class="footer-nav-heading">Resources</p>
             <ul class="footer-nav-list">
-              <li><a href="https://github.com/TSERATO/FancyDialogs-Web-Editor" target="_blank" rel="noopener" class="footer-nav-link">
+              <li><a href="https://github.com/tolnayeu/FancyDialogs-Editor" target="_blank" rel="noopener" class="footer-nav-link">
                 GitHub
                 <span class="material-symbols-outlined" aria-hidden="true">open_in_new</span>
               </a></li>
-              <li><a href="https://github.com/TSERATO/FancyDialogs-Web-Editor/issues" target="_blank" rel="noopener" class="footer-nav-link">
+              <li><a href="https://github.com/tolnayeu/FancyDialogs-Editor/issues" target="_blank" rel="noopener" class="footer-nav-link">
                 Report a Bug
+                <span class="material-symbols-outlined" aria-hidden="true">open_in_new</span>
+              </a></li>
+              <li><a href="https://fancyspaces.net/spaces/fancydialogs" target="_blank" rel="noopener" class="footer-nav-link">
+                FancySpaces
                 <span class="material-symbols-outlined" aria-hidden="true">open_in_new</span>
               </a></li>
             </ul>
